# doce

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.test.json
src-tauri/capabilities/: default.json
src-tauri/e2e-resources/: wdio.capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: dispatch.rs  mcp_disclosure.rs  mod.rs  observer.rs  plan.rs  rich_content.rs  service_registry.rs  subagent.rs
src-tauri/src/agent/skills/: gcal.md  gdrive.md  gkeep.md  gmail.md
src-tauri/src/agent/tools/: ask_user.rs  bash.rs  fs.rs  mod.rs  search.rs
src-tauri/src/bench/: mod.rs
src-tauri/src/commands/: agent.rs  attachments.rs  context.rs  conversations.rs  feed.rs  mcp.rs  mod.rs  models.rs  oauth.rs  scheduler.rs  search.rs  settings.rs  skills.rs  workspaces.rs
src-tauri/src/context/: limits.rs  mod.rs  offload.rs  payload.rs  transcript.rs
src-tauri/src/downloader/: mod.rs
src-tauri/src/hardware/: mod.rs
src-tauri/src/inference/: dialect.rs  http.rs  mod.rs  server.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/model_registry/: mod.rs  registry.json
src-tauri/src/oauth/: google_workspace.rs  mod.rs  store.rs
src-tauri/src/scheduler/: mod.rs  worker.rs
src-tauri/src/skills/: mod.rs
src-tauri/src/storage/: conversations.rs  memories.rs  messages.rs  migrations.rs  mod.rs
src-tauri/src/storage/migrations/: 0001_init.sql  0002_message_duration.sql  0003_rich_text_content_type.sql  0004_context_notice_content_type.sql  0005_message_token_count.sql  0006_tool_call_id.sql  0008_conversation_last_seen_at.sql  (+10 more)
src-tauri/tests/: agent_benchmark.rs  agent_tasks.rs  observer_smoke.rs  real_model_smoke.rs
src-tauri/tests/common/: mod.rs
(+366 files in other folders)
