[package]
name = "doce"
version = "0.1.0"
description = "doce — a fully local, zero-config personal AI agent for macOS"
edition = "2021"
rust-version = "1.80"

[lib]
name = "doce_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22"
glob = "0.3.3"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.27"
libc = "0.2"
reqwest = { version = "0.13.3", features = ["stream", "json"] }
rmcp = { version = "2.1.0", features = ["client", "macros", "server", "transport-child-process"] }
rusqlite = { version = "0.37", features = ["functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
specta = { version = "2.0.0-rc.25", features = ["serde_json"] }
specta-typescript = "0.0.12"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-wdio = { version = "1.2.0", optional = true }
tauri-plugin-wdio-webdriver = { version = "1.2.0", optional = true }
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
tempfile = { version = "3.27.0", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
tokio-util = "0.7.18"
uuid = { version = "1.20.0", features = ["v7"] }

[dev-dependencies]
schemars = "1.2.1"
tempfile = "3.27.0"
wiremock = "0.6.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

[features]
bench = ["dep:tempfile"]
wdio = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]
